...
       
        view?.updateAvatar(imageURL: url)
    }
    
    func logout() {
        let yesAction = UIAlertAction(
            title: "Да",
            style: .default) { [weak self] _ in
                self?.logoutConfirmed()
            }
        
        let noAction = UIAlertAction(
            title: "Нет",
            style: .cancel,
            handler: nil
        )
        
        view?.showAlert(
            title: "Пока, пока!",
            message: "Уверены что хотите выйти?",
            actions: [yesAction, noAction]
        )
    }
    
    func logoutConfirmed() {
...
