...
    
    // MARK: - Lifecycle
    override  func viewDidLoad() {
        super.viewDidLoad()
        
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
        presenter?.viewDidLoad()
        
        view.addSubview(progressView)
        setupConstraints()
    }
    
...
