...
        button.setTitle("Войти", for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: .bold)
        button.setTitleColor(.ypBlack, for: .normal)
        button.backgroundColor = .ypWhite
        button.layer.cornerRadius = 16
        button.layer.masksToBounds = true
        button.accessibilityIdentifier = "Authenticate"
        return button
    }()
    
    // MARK: - Lifecycle
    override  func viewDidLoad() {
        view.backgroundColor = UIColor(resource: .ypBlack)
...
